--- a/estilos.css
+++ b/estilos.css
@@ -7,7 +7,7 @@ form {
     border: 2px solid black;
     border-radius: 10px;
     padding: 20px;
-    margin: auto;
+    margin: 0 auto;
     background-color: #f9f9f9;
 }
 
